Long-press reset

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,3 +90,11 @@ input[type='search']::-moz-search-cancel-button {
 input[type='search']::-ms-clear {
   display: none;
 }
+
+/* Prevent text selection on long press for iOS Safari */
+.no-select {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
+}
